<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:alpha="1">

    <TextView
        android:id="@+id/date_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/weight_text_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weight_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/date_text_view"
        app:layout_constraintRight_toLeftOf="@+id/delete_entry"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delete_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintLeft_toRightOf="@+id/weight_text_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
